--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,24 @@
 {
     "files.exclude": {
-        "**/.git": false
-    }
+        "**/.git":true,
+        "/private/*.*": true
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "/private": true
+    },
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/**": true,
+        "**/bower_components/**": true,
+        "**/.hg/**": true,
+        "**/CVS/**": true,
+        "**/.svn/**": true,
+        "**/.DS_Store": true
+    },
+    "files.autoSave": "onFocusChange",
+    "workbench.editor.limit.value": 5
 }
